# anotify

./: Cargo.toml  LICENSE  readme.md  working.md
.cargo/: config
.github/workflows/: ci.yml
src/: binding.rs  bridge.rs  builder.rs  errors.rs  events.rs  futures.rs  handle.rs  inotify.rs  internal.rs  lib.rs  new.rs  registry.rs  request.rs  shared.rs  task.rs
src/docs/: lib.md
src/error/: mod.rs
src/new/: external.rs  internal.rs
src/new/internal/: binding.rs  inotify.rs  registry.rs
src/new/internal/inotify/: stats.rs
src/task/: mod.rs
