[package]
name = "anotify"
version = "0.1.3"
edition = "2021"
authors = [ "oldwomanjosiah <jhilden13@gmail.com>" ]
description = "Async iNotify Filesystem Watcher"
repository = "https://github.com/oldwomanjosiah/anotify"
readme = "readme.md"
license = "MIT"
keywords = [ "linux", "inotify", "async", "watch" ]
categories = [ "asynchronous", "api-bindings", "filesystem" ]
exclude = [
	".github/",
	"working.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
log = [ "tracing/log" ]

[dependencies]
nix = "0.25"
thiserror = "1"
tokio-stream = "0.1"
enumflags2 = "0.7"

[dependencies.tokio]
version = "1"
default-features = false
features = [ "sync", "rt", "net", "macros" ]

[dependencies.tracing]
package = "tracing"
version = "0.1"
default-features = false

[dev-dependencies]
tempdir = "0.3"
anyhow = "1.0"

[dev-dependencies.tokio]
version = "1"
default-features = true
features = [ "full", "test-util" ]
